# template-switch-statistics

./: Cargo.toml
src/: axis_transform.rs  main.rs  runtime_memory_csv.rs  statistics_file.rs
src/statistics_file/: alignment_strategies.rs  mod.rs
test_files/: .gitignore  local_test.sh  statistics-0.toml  statistics-1.toml  statistics-2.toml  statistics-3.toml  statistics-fpa.toml  statistics-tsalign.toml  test.sh
