[package]
name = "template-switch-statistics"
description = "Compute statistics for experiments with tsalign"
license = "BSD-2-Clause"
authors = ["Sebastian Schmidt <sebastian.schmidt@helsinki.fi>"]
repository = "https://github.com/sebschmi/template-switch-statistics"
version = "0.1.1"
edition = "2024"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
serde = { version = "1.0.218", features = ["derive"] }
toml = "0.8.20"
lib_tsalign = { version = "0.14.7", features = ["serde"] }
plotters = { version = "0.3.7", git = "https://github.com/sebschmi/plotters", branch = "master", default-features = false, features = [
    "svg_backend",
    "all_elements",
    "all_series",
] }
noisy_float = { version = "0.2.0", features = ["serde"] }
log = "0.4.27"
simplelog = "0.12.2"
strum = { version = "0.27.1", features = ["derive"] }
