[package]
name = "template-switch-statistics"
description = "Compute statistics for experiments with tsalign"
license = "BSD-2-Clause"
authors = ["Sebastian Schmidt <sebastian.schmidt@helsinki.fi>"]
repository = "https://github.com/sebschmi/template-switch-statistics"
version = "0.1.2"
edition = "2024"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.0.3"
lib_tsalign = { version = "0.21.3", features = ["serde"] }
plotters = { version = "0.3.7", git = "https://github.com/sebschmi/plotters", branch = "master", default-features = false, features = [
    "svg_backend",
    "all_elements",
    "all_series",
] }
noisy_float = { version = "0.2.1", features = ["serde"] }
log = "0.4.29"
simplelog = "0.12.2"
strum = { version = "0.28.0", features = ["derive"] }
